--- a/styles.scss
+++ b/styles.scss
@@ -130,6 +130,16 @@ p {
     }
 }
 
+.col-l {
+    align-self: center;
+    padding-right: 2rem;
+}
+
+.col-r {
+    align-self: center;
+    padding-left: 2rem;
+}
+
 hr {
     display: block;
     border: 0;
